--- a/CoreDemo/CoreDemo.csproj
+++ b/CoreDemo/CoreDemo.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.96.0" />
     <PackageReference Include="FluentValidation" Version="11.2.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
@@ -30,7 +31,6 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Views\Home\" />
     <Folder Include="wwwroot\WriterImageFiles\" />
     <Folder Include="wwwroot\weberror\Core404Page-main\bicycle-error-page_web_Free20-12-2019_162184719\" />
